Fix a bug in the structure and styling of the navbar, particularly the positioning of the header links. Fix it by placing all the header links in the unordered list into a separate div with the class of link-box in order to align and position them properly using flexbox

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,13 @@ ul {
     margin: 10px;
 }
 
+.link-box {
+    display: flex;
+    margin-left: 300px;
+    margin-right: 200px;
+    gap: 25px;
+}
+
 .nav-container {
     background-color: #1f2937;
     width: 100%;
